--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "finshmlserv"
 version = "0.1.0"
-description = "Default template for PDM package"
+description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
 authors = [
     {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
 ]
