--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "finshmlserv"
-version = "0.1.0"
+version = "0.4.0"
 description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
 authors = [
     {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
@@ -9,7 +9,7 @@ dependencies = [
     "fastapi>=0.112.2",
     "uvicorn[standard]>=0.30.6",
 ]
-requires-python = "==3.8.*"
+requires-python = "=>3.8.*"
 readme = "README.md"
 license = {text = "MIT"}
 
