--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,18 @@ authors = [
 dependencies = [
     "fastapi>=0.112.2",
     "uvicorn[standard]>=0.30.6",
+    "matplotlib>=3.7.5",
+    "scikit-learn>=1.3.2",
 ]
-requires-python = "=>3.8.*"
+requires-python = "==3.8.*"
 readme = "README.md"
 license = {text = "MIT"}
 
 
 [tool.pdm]
 distribution = false
+
+[tool.pdm.dev-dependencies]
+note = [
+    "notebook>=7.2.2",
+]
