--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "finshmlserv"
-version = "0.7.9"
+version = "0.7.15"
 description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
 authors = [
     {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
@@ -17,7 +17,12 @@ license = {text = "MIT"}
 
 
 [tool.pdm]
-distribution = false
+distribution = true
+
+[tool.pytest.ini_options]
+pythonpath = [
+  ".", "src",
+]
 
 [tool.pdm.dev-dependencies]
 note = [
