--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
 ]
 dependencies = [
+    "typer>=0.12.5",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
@@ -24,3 +25,8 @@ pythonpath = [
 note = [
     "notebook>=7.2.2",
 ]
+
+[project.scripts]
+finshmlserv-ping = 'finshmlserv.cli:ping'
+get-model-path = 'finshmlserv.cli:get_model_path'
+prediction = "finshmlserv.cli:prediction"
